[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cognitive-cost-quantization"
version = "0.0.1"
description = "Measuring the cognitive cost of LLM quantization using the CARS metric"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Rishav", email = "rishav1305@users.noreply.github.com"},
]

dependencies = [
    "torch>=2.1.0",
    "transformers>=4.40.0",
    "accelerate>=0.27.0",
    "bitsandbytes>=0.43.0",
    "autoawq>=0.2.0",
    "auto-gptq>=0.7.0",
    "lm-eval>=0.4.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.22.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
